--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,16 @@
         {{ content }}
       </div>
     </div>
+    
+    {% comment %}
+    =======================
+    The purpose of this snippet is to list all the tags you have in your site.
+    =======================
+    {% endcomment %}
+    {% for tag in tags %}
+    	<a href="#{{ tag | slugify }}"> {{ tag }} </a>
+    {% endfor %}
+    
 
     {% include footer.html %}
 
