--- a/_layouts/tag_index.html
+++ b/_layouts/tag_index.html
@@ -1,21 +1,70 @@
 ---
 layout: default
+title: Tag
 ---
-<h2 class="post_title">{.{page.title}}</h2>
-<ul>
-  {.% for post in site.posts %}
-  {.% for tag in post.tags %}
-  {.% if tag == page.tag %}
-  <li class="archive_list">
-    <time style="color:#666;font-size:11px;" datetime='{.{post.date | date: "%Y-%m-%d"}}'>{.{post.date | date: "%m/%d/%y"}}</time> <a class="archive_list_article_link" href='{.{post.url}}'>{.{post.title}}</a>
-    <p class="summary">{.{post.summary}}</p>
-    <ul class="tag_list">
-      {.% for tag in post.tags %}
-      <li class="inline archive_list"><a class="tag_list_link" href="/tag/{.{ tag }}">{.{ tag }}</a></li>
-      {.% endfor %}
+
+
+{% comment %}
+=======================
+The following part extracts all the tags from your posts and sort tags, so that you do not need to manually collect your tags to a place.
+=======================
+{% endcomment %}
+
+{% assign rawtags = "" %}
+{% for post in site.posts %}
+	{% assign ttags = post.tags | join:'|' | append:'|' %}
+	{% assign rawtags = rawtags | append:ttags %}
+{% endfor %}
+{% assign rawtags = rawtags | split:'|' | sort %}
+
+{% comment %}
+=======================
+The following part removes dulpicated tags and invalid tags like blank tag.
+=======================
+{% endcomment %}
+{% assign tags = "" %}
+{% for tag in rawtags %}
+	{% if tag != "" %}
+		{% if tags == "" %}
+			{% assign tags = tag | split:'|' %}
+		{% endif %}
+		{% unless tags contains tag %}
+			{% assign tags = tags | join:'|' | append:'|' | append:tag | split:'|' %}
+		{% endunless %}
+	{% endif %}
+{% endfor %}
+
+
+<div class="tags-expo">
+  <!-- tag cloud itself -->
+  <div class="tags-expo-list">
+    {% assign tags = site.tags | sort %}
+    {% for tag in tags %}
+     <span class="site-tag">
+        <a href="#{{ tag | first | slugify }}"
+            style="font-size: {{ tag | last | size  |  times: 4 | plus: 80  }}%">
+                {{ tag[0] | replace:'-', ' ' }} ({{ tag | last | size }})
+        </a>
+    </span>
+    {% endfor %}
+    
+  </div>
+  <p>&nbsp;</p>
+  <hr/>
+  <p>&nbsp;</p>
+  <div class="tags-expo-section">
+    {% for tag in site.tags %}
+    <h1 id="{{ tag[0] | slugify }}">{{ tag[0] }}</h1>
+    <ul class="tags-expo-posts">
+      {% for post in tag[1] %}
+        <a class="post-title" href="{{ site.baseurl }}{{ post.url }}">
+      <li>
+        {{ post.title }}
+      <small class="post-date">{{ post.date | date_to_string }}</small>
+      </li>
+      </a>
+      {% endfor %}
     </ul>
-  </li>
-  {.% endif %}
-  {.% endfor %}
-  {.% endfor %}
-</ul>
+    {% endfor %}
+  </div>
+</div>
