fox gardin + garlic salt + bell peppers

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -122,6 +122,17 @@ blockquote {
     }
 }
 
+/*
+sjohnson addition from https://gist.github.com/andyferra/2554919 
+*/
+blockquote {
+  border-left: 4px solid #dddddd;
+  padding: 0 15px;
+  color: #777777; }
+  blockquote > :first-child {
+    margin-top: 0; }
+  blockquote > :last-child {
+    margin-bottom: 0; }
 
 
 /**
@@ -203,4 +214,9 @@ pre {
             fill: $grey-color;
         }
     }
+}
+
+.site-tag a {
+    display: inline-block;
+    margin-right: 12px;
 }
