--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -175,24 +175,42 @@
     font-size: 20px;
 }
 
+
+
 .post-list {
     margin-left: 0;
     list-style: none;
 
     > li {
-        margin-bottom: $spacing-unit;
+        /*margin-bottom: $spacing-unit ; */
+        margin-bottom: 0 ;
     }
 }
 
+/*
+.post-list { margin-left: 0; list-style: none; }
+*/
+
+
+
+/*
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
 }
+*/
 
+.post-meta { font-size: 14px; color: #828282; }
+@media screen and (max-width: 600px) { .post-meta { display: none; } }
+
+/*
 .post-link {
     display: block;
     font-size: 24px;
 }
+*/
+
+.post-link { font-size: 24px; text-indent: -0.5em; margin-left: 0.5em; }
 
 
 
