--- a/css/main.scss
+++ b/css/main.scss
@@ -23,7 +23,7 @@ $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
 // Width of the content area
-$content-width:    800px;
+$content-width:    1000px;
 
 $on-palm:          600px;
 $on-laptop:        800px;
@@ -43,6 +43,13 @@ $on-laptop:        800px;
     }
 }
 
+.center {
+  text-align: center;
+}
+
+.center {
+  text-align: left;
+}
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
