--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,3 +13,7 @@ layout: default
   </div>
 
 </article>
+
+<div class="just-comments" data-apikey="2fb5b93f-dad4-41c0-a9c4-645079ddc541"></div>
+<script async src="https://just-comments.com/w.js"></script>
+
