--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,34 @@
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}">
   {% seo %}
+
+  <!-- twitter specific head tags -->
+  
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@fuzzygroup">
+  <meta name="twitter:creator" content="@fuzzygroup">
+  <meta name="twitter:title" content="{{ page.title }}">
+
+  {% if page.description %}
+    <meta name="twitter:description"
+      content="{{ page.description }}">
+  {% else %}
+    <meta name="twitter:description"
+      content="{{ page.content | strip_html | xml_escape
+        | truncate: 200 }}">
+  {% endif %}
+
+  {% if page.image %}
+    <meta name="twitter:image"
+      content="{{ page.image }}">
+  {% else if 3 == 4%}
+    <meta name="twitter:image"
+      content="http://fuzzyblog.io/blog/assets/scott_johnson.jpg">
+  {% else %}
+    <meta name="twitter:image"
+      content="https://scontent-ort2-2.xx.fbcdn.net/v/t1.0-1/p320x320/68719171_10157771682836416_1011394309204738048_n.jpg?_nc_cat=104&_nc_oc=AQkkqjMu-HihktMpnEakT1ZihBalo2WE5ILAGYUEWogIpytHlyaZvAiBHYaB9ZpCg3c&_nc_ht=scontent-ort2-2.xx&oh=0173f75a9378e95c4648333322ea598d&oe=5DD9D289">
+  {% endif %}
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
