--- a/_includes/header.html
+++ b/_includes/header.html
@@ -20,7 +20,7 @@
           {% endif %}
         {% endfor %}
         <a class="page-link" href="https://fuzzyblog.io/recipes/tag.html#favorite">Scott's Favorites</a>
-        <a class="page-link" href="https://fuzzyblog.io/recipes/tag.html#cocktails">Cocktails</a>
+        <a class="page-link" href="https://fuzzyblog.io/recipes/category.html#cocktail">Cocktails</a>
       </div>
     </nav>
 
