added search form

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -48,4 +48,13 @@
     ga('send', 'pageview');
 
   </script>
+    
+  <script type="text/javascript">
+    function do_search() {
+      var searchForm = document.getElementById('search');
+      var q = document.getElementById('q');
+      var searchQuery = "site:fuzzyblog.io " + q.value;
+      document.location = "https://www.google.com/search?q=" + searchQuery;
+    }
+  </script>
 </head>
