Removed search form

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,12 +10,13 @@
     <div class="page-content">
       <div class="wrapper">
         <div style="width: 100%; float:right; text-align: center; valign: center; padding: 10px; border: 2px dashed blue">
-
+<!--
             <form id="search" action="https://www.google.com/search">
              <strong>What do you want to cook today?</strong> <input id="q" name="q" size=40>
               <button type="submit" form="form1" value="Search" onclick="do_search();">Search</button><br/>&nbsp;
             </form>
-
+-->
+					<p>Use Command (or Control) + F on your browser to search this; all recipes are listed from this page.</p>
         </div>
         {{ content }}
       </div>
